# QuantRelNet

./: LICENSE  README.md  VISUALIZATION_GUIDE.md  pyproject.toml
examples/: main.py  visualization_showcase.py
physlib/: __init__.py  visualization.py
physlib/astrophysics/: __init__.py  big_bang.py  black_holes.py
physlib/classical_mechanics/: __init__.py  energy.py  gravity.py  momentum.py  newton.py
physlib/electromagnetism/: __init__.py  fields.py  lorentz.py  maxwell.py
physlib/quantum_mechanics/: tunneling.py  uncertainty.py
physlib/relativity/: special.py
physlib/s01_classical_mechanics/: energy.py  gravity.py  momentum.py  newton.py  visualizations.py
physlib/s02_thermodynamics/: entropy.py  heat_transfer.py  laws.py  visualizations.py
physlib/s03_electromagnetism/: fields.py  lorentz.py  maxwell.py  visualizations.py
physlib/s04_waves_optics/: interference.py  ray_tracing.py  visualizations.py  wave_equation.py
physlib/s05_relativity/: __init__.py  general.py  special.py  visualizations.py
physlib/s06_quantum_mechanics/: __init__.py  schrodinger.py  tunneling.py  uncertainty.py  visualizations.py
physlib/s07_astrophysics/: big_bang.py  black_holes.py  standard_model.py  visualizations.py
physlib/thermodynamics/: __init__.py  entropy.py  heat_transfer.py
physlib/waves_optics/: __init__.py  wave_equation.py
